// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag (unit tests) when size is small should match the snapshot 1`] = `
<kv-tag color="neutral" label="Tag Small" size="small">
  <template shadowrootmode="open">
    <div class="tag-container tag-container--color-neutral tag-container--size-small">
      <slot name="left-slot"></slot>
      <div class="tag-label">
        Tag Small
      </div>
      <slot name="right-slot"></slot>
    </div>
  </template>
</kv-tag>
`;

exports[`Tag (unit tests) when uses default props should match the snapshot 1`] = `
<kv-tag color="neutral" label="Tag Default" size="large">
  <template shadowrootmode="open">
    <div class="tag-container tag-container--color-neutral tag-container--size-large">
      <slot name="left-slot"></slot>
      <div class="tag-label">
        Tag Default
      </div>
      <slot name="right-slot"></slot>
    </div>
  </template>
</kv-tag>
`;
